Release: v0.0.9 (#42)
* fix: Enable CORS (#40)

* feat: Register endpoint (#39)

* feat: enpoint registration coverage 57%

Implementation of the registration endpoint, 57% coverage is achieved

* style: Fix formatter and linter warnings

* test: Use random data in register tests

* refactor: Update register endpoint according to the `.net` spec

* test: Fix broken test

---------
